  * Support for "drop function" 

  * Fixed issue where server would not report on a bad unique value due to size

  * Forces do operations to complete no matter how the worker is designed.

0.20 Fri Apr  8 09:25:15 PDT 2011
  * gearman_client_execute() interface added
  * New types of gearman_unique_t, gearman_function_st, gearman_workload_t
  * Better error reporting from clients.
  * Server no longer hangs because of bad job list.
  * First bit of work on supporting epoch portion of protocol.  
  * Improved error message handling in client. 
  * Updates for manpages.

0.19 Fri Apr  1 09:50:22 PDT 2011
  * Fix bug where gearman util would create duplicate output.
  * Update sqlite queue so that it uses a prepared statement.
  * Fixes a number cases where server was not initializing default values
  internally correctly.  
  * gearman_client_compare()  API added. Returns true if the client
  connections are connects are equivalent.

0.18 Tue Mar 15 13:32:33 PDT 2011
  * Bug fix for compile when no plugins are requested.
  * Bug fix where during startup using Drizzle or MySQL the server could crash.
  * Bug fix to make sure test programs will run if NULL sized objects are sent.


0.17 Tue Mar  8 08:27:04 PST 2011
  * gearadmin added, easy access to shutdown, version, and verbose commands
  on the server.
  * Bug fixes related to CLI.
  * Bug fixes related to Memcached support.
  * Bug fixes related to Drizzle support.
  * Dependency on boost now required for build.
  * Drizzle queue module expects that a schema named "gearmand" exists.
  * Fix copyright headers were needed.

0.16 Tue Feb 22 10:55:33 PST 2011
  * Fixed cases where silent failure of server for queues would not cause tests to fail.
  * Fix for failure when setsockopt() failed on new connection.
  * Fixed silen exit in client library based on signals.
  * Error log now reports failure location in compiled code for ERROR conditions.
  * Fix for failover.