@@ -4,6 +4,8 @@
 
   * Forces do operations to complete no matter how the worker is designed.
 
+  * Tasks inherit actions from client, and use them throughout execution.
+
 0.20 Fri Apr  8 09:25:15 PDT 2011
   * gearman_client_execute() interface added
   * New types of gearman_unique_t, gearman_function_st, gearman_workload_t
